fix overflow issue

--- a/frontend/src/components/Export.css
+++ b/frontend/src/components/Export.css
@@ -16,8 +16,7 @@
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  overflow-y: scroll;
-  scrollbar-width: none;
+  overflow-y: auto;
 }
 
 .overlay {
@@ -81,8 +80,8 @@ h2 {
   flex-direction: row;
   margin-left: 10px;
   width: 90%;
-  overflow-x: scroll;
-  scrollbar-width: none;
+  overflow-x: auto;
+  min-height: fit-content;
 }
 
 .timestamp {
